src/test/ui/parser/macro/trait-non-item-macros.stderr
error: expected one of `async`, `const`, `crate`, `default`, `extern`, `fn`, `pub`, `static`, `type`, `unsafe`, or identifier, found `2`
  --> $DIR/trait-non-item-macros.rs:2:19
   |
LL |     ($a:expr) => ($a)
   |                   ^^ expected one of 11 possible tokens
...
LL |     bah!(2);
   |     -------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

